--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,6 @@ body {
   -webkit-flex-direction: column;
   flex-grow: 1;
   -webkit-flex-grow: 1;
-  flex-direction: column;
-  -webkit-flex-direction: column;
   height: 100%;
 } 
 
@@ -81,10 +79,10 @@ ul {
   z-index: 50;
 } 
 
-#home {background-color: #000000;background-image: linear-gradient(327deg, rgb(0,16,67) 0%, rgb(1, 8, 20) 74%);}
-#user-control  {background-color: #000000;background-image: linear-gradient(327deg, rgb(0,16,67) 0%, rgb(1, 8, 20) 74%);}
-#blacklist-category {background-color: #000000;background-image: linear-gradient(327deg, rgb(0,16,67) 0%, rgb(1, 8, 20) 74%);}
-#blacklist-channel  {background-color: #000000;background-image: linear-gradient(327deg, rgb(0,16,67) 0%, rgb(1, 8, 20) 74%);}
+#home {background-color: #000000;background-image: linear-gradient(327deg, #212121 0%, #454F55 74%);}
+#user-control  {background-color: #000000;background-image: linear-gradient(327deg, #212121 0%, #454F55 74%);}
+#blacklist-category {background-color: #000000;background-image: linear-gradient(327deg, #212121 0%, #454F55 74%);}
+#blacklist-channel  {background-color: #000000;background-image: linear-gradient(327deg, #212121 0%, #454F55 74%);}
 
 .tablink { 
   background-color: #010b2a;
@@ -292,23 +290,23 @@ textarea {
   -webkit-align-items: center;
   height: 15%;
   min-height: 15%;
-  background-color: #000000;
+  /*background-color: #000000;*/
   /*background-image: linear-gradient(327deg, rgb(1,9,36) 0%, rgb(1,3,20) 74%);*/
-  background-image: linear-gradient(60deg, rgb(0,0,0) 0%, rgb(0, 11, 49) 74%);
+  background-image: linear-gradient(60deg, #212121 0%, #454F55 74%);
   border-bottom: 2px solid #ffffff;
   box-sizing: border-box;
 } 
 .header.channel{
-  background-image: linear-gradient(60deg, rgb(0,0,0) 0%, rgb(0, 34, 73) 74%);
+  background-image: linear-gradient(60deg, #212121 0%, #454F55 74%);
 }
 .header h1 {
-  width:20%; 
+  width:15%; 
   color: #fff;
   font-size: 4em;
   text-align: center;
 } 
 .top-channel-info{    
-  width:60%;
+  width:75%;
   text-align:center; 
   font-size: 2em; 
   flex-grow: 1;
@@ -326,7 +324,7 @@ textarea {
 
 .settings{  
   padding-right: 1%;
-  width:20%; 
+  width:10%; 
   text-align: right; 
 } 
 
@@ -413,18 +411,18 @@ input[type=number] {
   flex-direction: row;
   -webkit-flex-direction: row; 
   background-color:rgb(0, 6, 27);
-  background-image: linear-gradient(60deg, rgb(0, 6, 27) 0%, rgb(0, 11, 49) 74%);
+  background-image: linear-gradient(60deg, #212121 0%, #454F55 74%);
   /*background-image: linear-gradient(60deg, rgb(0, 11, 49) 0%,rgb(0,0,0)  74%);*/
 }
 .section.channel{
-  background-image: linear-gradient(60deg, rgb(0, 8, 17) 0%, rgb(0, 23, 49) 74%);
+  background-image: linear-gradient(60deg, #212121 0%, #454F55 74%);
 } 
  
 
 .sidebar {   
   width: 100%;
   min-width: 100%;
-  background-color:rgb(0,6,26); 
+  background-image: linear-gradient(60deg, #212121 0%, #454F55 74%); 
   /*border-right: 2px solid #ffffff;
   border-left: 2px solid #ffffff; */
   border-bottom: 2px solid #ffffff;
@@ -435,7 +433,7 @@ input[type=number] {
   
 }
 #sidebar.channel{
-  background-color:rgb(0, 21, 44); 
+  background-color:#454F55; 
 }
 
 #sidebar.min{  
@@ -607,7 +605,7 @@ input[type=number] {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: #000;
+  background: #212121;
   z-index: 7;
 }
 
@@ -617,7 +615,7 @@ input[type=number] {
 
 #channel-list {      
   color: #fff;
-  font-size: 1.3em; 
+  font-size: 2.0em; 
   height:100% ; 
   width: 100%;  
   overflow: hidden; 
@@ -645,11 +643,11 @@ input[type=number] {
   flex-direction: column;
 	align-items: center;  
 	justify-content: center; 
-  background: rgb(2, 12, 34); 
+  background: #333333; 
   /* border: 0.05em solid #669bff;
   box-shadow:  .1em .1em #669bff; */ 
   border: 0.05em solid rgba(196, 216, 253, 0.329);
-  box-shadow:  .1em .1em rgba(196, 216, 253, 0.329); 
+  box-shadow:  -0.05em -0.05em rgba(196, 216, 253, 0.329); 
   border-radius: 0.5em;
   height: 13%; 
   color:#fff;
@@ -657,18 +655,18 @@ input[type=number] {
   position: relative;
   /*font-weight: bold;   */ 
   /*word-break: break-all;*/
-  word-break:break-word;
+  word-wrap:break-word;
   /*padding-top: 0.5em; 
   padding-bottom:  0.5em;
   padding-right:  0.5em;   */
 }
 #channel-list.channel li{
-  background: rgb(0, 22, 49);
+  background: #333333;
 }  
 #channel-list li.playing { 
   font-weight: bold; 
-  background: rgb(1, 158, 1) !important; 
-  box-shadow: 0.1em 0.1em #04d920 !important;
+  background: #34A85A !important; 
+  box-shadow: -0.05em -0.05em #04d920 !important;
   border: 0.05em solid #04d920 !important; 
 }  
 #channel-list li.selected { 
@@ -676,9 +674,9 @@ input[type=number] {
   z-index: 10;
   /* width: 24.5%;   */
   transition: transform .3s ;    
-  border: 0.05em solid rgb(202, 30, 0);
-  box-shadow:  .1em .1em rgb(202, 30, 0); 
-  background: rgb(141, 21, 0);  
+  border: 0.05em solid #04d920;
+  box-shadow:  -0.05em -0.05em #04d920; 
+  background: #228B22;  
   /* box-shadow:  0 0 0.1em  0.1em rgb(0, 34, 255);
   border: 0.05em solid rgb(0, 34, 255);   
   background: rgb(0, 31, 204); */
@@ -733,7 +731,7 @@ input[type=number] {
 	color:#ffffff;  
   align-items: center; 
 	justify-content: center;  
-  width: 60%;  
+  width: 50%;  
 } 
 .channel-logo{  
   align-items: center; 
@@ -763,6 +761,7 @@ li img {
   padding-right:2%;
   width: 81%; 
 	font-size:1.0em; 
+  margin-left: -3.0em;
 	color:#ffffff;
 }  
 .category-channel-count{  
@@ -770,8 +769,9 @@ li img {
   display: flex;  
   align-items: center; 
 	justify-content: center;  
-  width: 85%;
+  width: 81%;
   font-size:1.0em;
+  margin-left: -3.0em;
 	color:#ffaa00;  
 } 
  
@@ -835,7 +835,6 @@ li img {
   align-content: center;
   flex-direction: column;
   align-items: center; 
-  justify-content: center;	
   text-align:left; 
   border: 1px solid;
   border-radius: 1em ;
@@ -877,7 +876,7 @@ li img {
   height: 12.5%;
   opacity: 0.9;
   color: rgb(255, 255, 255);
-  background: rgb(0, 14, 31);
+  background: #333333;
  
   /*background: linear-gradient(338deg, rgba(62,133,199,0.8) 0%, rgba(35,157,209,0.8) 50%, rgba(48,126,198,0.8) 100%);*/
   /* background: linear-gradient(338deg, rgba(48,89,198,0.5) 0%, rgba(35,120,209,0.5) 50%, rgba(48,89,198,0.5) 100%); */
@@ -909,7 +908,6 @@ li img {
 #bottom-channel-info-right{ 
   display: flex;
   flex-direction: column;
-  display: -webkit-flex;
   align-items: center; 
 	border-left-style: solid;
 	border-left-width: thin;
